# nm-daemon

./: Cargo.toml  PLAN.md  README.md  flake.nix  justfile  rqlens.toml
docs/: architecture.md  dbus-daemon.md  nmcli-parity.md
packaging/systemd/: nm-daemon.service
src/: actions.rs  app.rs  application.rs  auth.rs  background_scan.rs  cache.rs  cli.rs  client.rs  command.rs  connect.rs  connect_cancel.rs  connect_error.rs  connect_wait.rs  contract.rs  daemon.rs  daemon_connect.rs  daemon_dispatch.rs  daemon_event.rs  daemon_methods.rs  daemon_runtime.rs  daemon_scan.rs  daemon_secret.rs  daemon_state.rs  daemon_status.rs  deadline.rs  diagnose.rs  error.rs  forget.rs  keyring.rs  lib.rs  list.rs  logging.rs  main.rs  model.rs  nl80211.rs  nm.rs  output.rs  protocol.rs  qr.rs  rofi.rs  (+4 more)
src/cache/: merge.rs  storage.rs
src/command/: iw.rs  nmcli.rs
src/model/: identity.rs  wire_v1.rs
src/nm/: activate.rs  connectivity.rs  devices.rs  events.rs  mod.rs  scan.rs  settings.rs  status.rs  wifi_settings.rs
src/nm/wifi_settings/: profile.rs  tests.rs
test_support/: contract-v1.json  model_unit.rs  settings_unit.rs
tools/: connect-parity-probe.sh
