[package]
name = "nm-daemon"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
neli = "0.6.5"
neli-wifi = "0.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustix = { version = "1", features = ["fs", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "5", features = ["blocking"] }
zvariant = "5"

[dev-dependencies]
zbus = { version = "5", features = ["blocking", "bus-impl", "p2p"] }
